--- a/modules/hydra-manager/src/main/resources/mysql.properties
+++ b/modules/hydra-manager/src/main/resources/mysql.properties
@@ -1,3 +1,5 @@
-jdbc.url=jdbc:mysql://192.168.228.81:3306/hydra-config-test-pressure
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/hydra
 jdbc.username=root
-jdbc.password=root
+jdbc.password=mysql
+
